--- a/day00/ex01/mendeleiev.html
+++ b/day00/ex01/mendeleiev.html
@@ -7,12 +7,12 @@
         body {
             width: 100%;
             background: url("https://content.nebo.by/photos/stroymaterialy/big/RAL-8017-SHokoladno-korichnevii.png");
+            text-align: center;
         }
         p {
             margin: 2px;
         }
         table {
-            margin-left: 20px;
             width: max-content;
         }
         td {
@@ -51,17 +51,18 @@
     </style>
 </head>
 <body>
+ <div>
+        <h1> Таблица Менделеева</h1>
+ </div>
 <div>
     <table>
         <!--LINE 1-->
         <tr>
-            <!--1-->
             <td class="cell t_col_1">
                 <p class="mass">1.008</p>
                 <p class="element">H</p>
                 <p class="number">1</p>
             </td>
-            <!--2-->
             <td colspan="16"></td>
             <td class="cell t_col_10">
                 <p class="mass">4.003</p>
@@ -71,51 +72,42 @@
         </tr>
         <!--LINE 2-->
          <tr>
-            <!--1-->
             <td class="cell t_col_2">
                 <p class="mass">6.941</p>
                 <p class="element">Li</p>
                 <p class="number">3</p>
             </td>
-            <!--2-->
             <td class="cell t_col_3">
                 <p class="mass">9.012</p>
                 <p class="element">Be</p>
                 <p class="number">4</p>
             </td>
-            <!--3-->
             <td colspan="10"></td>
-            <!--13-->
             <td class="cell t_col_7">
                 <p class="mass">10.811</p>
                 <p class="element">B</p>
                 <p class="number">5</p>
             </td>
-            <!--14-->
             <td class="cell t_col_1">
                 <p class="mass">12.011</p>
                 <p class="element">C</p>
                 <p class="number">6</p>
             </td>
-            <!--15-->
             <td class="cell t_col_1">
                 <p class="mass">14.0007</p>
                 <p class="element">N</p>
                 <p class="number">7</p>
             </td>
-            <!--16-->
             <td class="cell t_col_1">
                 <p class="mass">15.999</p>
                 <p class="element">O</p>
                 <p class="number">8</p>
             </td>
-            <!--17-->
             <td class="cell t_col_9">
                 <p class="mass">18.998</p>
                 <p class="element">F</p>
                 <p class="number">9</p>
             </td>
-            <!--18-->
             <td class="cell t_col_10">
                 <p class="mass">20.18</p>
                 <p class="element">Ne</p>
@@ -124,50 +116,42 @@
         </tr>
         <!--LINE 3-->
          <tr class="cell">
-            <!--1-->
             <td class="cell t_col_2">
                 <p class="mass">22.99</p>
                 <p class="element">Na</p>
                 <p class="number">11</p>
             </td>
-            <!--2-->
             <td class="cell t_col_3">
                 <p class="mass">24.305</p>
                 <p class="element">Mg</p>
                 <p class="number">12</p>
             </td>
             <td colspan="10"></td>
-            <!--13-->
             <td class="cell t_col_8">
                 <p class="mass">26.982 </p>
                 <p class="element">Al</p>
                 <p class="number">13</p>
             </td>
-            <!--14-->
             <td class="cell t_col_7">
                 <p class="mass">1.008</p>
                 <p class="element">Si</p>
                 <p class="number">1</p>
             </td>
-            <!--15-->
             <td class="cell t_col_1">
                 <p class="mass">1.008</p>
                 <p class="element">P</p>
                 <p class="number">1</p>
             </td>
-            <!--16-->
             <td class="cell t_col_1">
                 <p class="mass">1.008</p>
                 <p class="element">S</p>
                 <p class="number">1</p>
             </td>
-            <!--17-->
             <td class="cell t_col_9">
                 <p class="mass">1.008</p>
                 <p class="element">Cl</p>
                 <p class="number">1</p>
             </td>
-            <!--18-->
             <td class="cell t_col_10">
                 <p class="mass">1.008</p>
                 <p class="element">Ar</p>
@@ -176,104 +160,86 @@
         </tr>
         <!--LINE 4-->
          <tr class="cell">
-            <!--1-->
             <td class="cell t_col_2">
                 <p class="mass">39.1</p>
                 <p class="element">K</p>
                 <p class="number">19</p>
             </td>
-            <!--2-->
             <td class="cell t_col_3">
                 <p class="mass">40.08</p>
                 <p class="element">Ca</p>
                 <p class="number">20</p>
             </td>
-            <!--3-->
-            <!--4-->
             <td class="cell t_col_6">
                 <p class="mass">44.96</p>
                 <p class="element">Sc</p>
                 <p class="number">21</p>
             </td>
-            <!--5-->
             <td class="cell t_col_6">
                 <p class="mass">47.87</p>
                 <p class="element">Ti</p>
                 <p class="number">22</p>
             </td>
-            <!--6-->
             <td class="cell t_col_6">
                 <p class="mass">50.94</p>
                 <p class="element">V</p>
                 <p class="number">23</p>
             </td>
-            <!--7-->
             <td class="cell t_col_6">
                 <p class="mass">51.99</p>
                 <p class="element">Cr</p>
                 <p class="number">24</p>
             </td>
-            <!--8-->
             <td class="cell t_col_6">
                 <p class="mass">54.94</p>
                 <p class="element">Mn</p>
                 <p class="number">25</p>
             </td>
-            <!--9-->
             <td class="cell t_col_6">
                 <p class="mass">55.85</p>
                 <p class="element">Fe</p>
                 <p class="number">26</p>
             </td>
-            <!--10-->
             <td class="cell t_col_6">
                 <p class="mass">58.93</p>
                 <p class="element">Co</p>
                 <p class="number">27</p>
             </td>
-            <!--11-->
             <td class="cell t_col_6">
                 <p class="mass">58.69</p>
                 <p class="element">Ni</p>
                 <p class="number">28</p>
             </td>
-            <!--12-->
             <td class="cell t_col_6">
                 <p class="mass">63.55</p>
                 <p class="element">Cu</p>
                 <p class="number">29</p>
             </td>
-            <!--13-->
             <td class="cell t_col_6">
                 <p class="mass">65.38</p>
                 <p class="element">Zn</p>
                 <p class="number">30</p>
             </td>
-            <!--14-->
             <td class="cell t_col_8">
                 <p class="mass">69.72</p>
                 <p class="element">Ga</p>
                 <p class="number">31</p>
             </td>
-            <!--15-->
             <td class="cell t_col_7">
                 <p class="mass">72.63</p>
                 <p class="element">Ge</p>
                 <p class="number">32</p>
             </td>
-            <!--16-->
             <td class="cell t_col_7">
                 <p class="mass">74.92</p>
                 <p class="element">As</p>
                 <p class="number">33</p>
             </td>
-            <!--17-->
             <td class="cell t_col_1">
                 <p class="mass">78.97</p>
                 <p class="element">Se</p>
                 <p class="number">34</p>
             </td>
-            <!--18-->
             <td class="cell t_col_9">
                 <p class="mass">79.9</p>
                 <p class="element">Br</p>
@@ -287,43 +253,36 @@
         </tr>
         <!--LINE 5-->
          <tr class="cell">
-            <!--1-->
             <td class="cell t_col_2">
                 <p class="mass">85.47</p>
                 <p class="element">Rb</p>
                 <p class="number">37</p>
             </td>
-            <!--2-->
             <td class="cell t_col_3">
                 <p class="mass">87.62</p>
                 <p class="element">Sr</p>
                 <p class="number">38</p>
             </td>
-            <!--3-->
             <td class="cell t_col_6">
                 <p class="mass">99.91</p>
                 <p class="element">Y</p>
                 <p class="number">39</p>
             </td>
-            <!--4-->
             <td class="cell t_col_6">
                 <p class="mass">91.22</p>
                 <p class="element">Zr</p>
                 <p class="number">40</p>
             </td>
-            <!--5-->
             <td class="cell t_col_6">
                 <p class="mass">92.91</p>
                 <p class="element">Nb</p>
                 <p class="number">41</p>
             </td>
-            <!--6-->
             <td class="cell t_col_6">
                 <p class="mass">95.95</p>
                 <p class="element">Mo</p>
                 <p class="number">42</p>
             </td>
-            <!--7-->
             <td class="cell t_col_6">
                 <p class="mass">97</p>
                 <p class="element">Tc</p>
