position absolute rule

--- a/day00/ex02/doft.html
+++ b/day00/ex02/doft.html
@@ -9,11 +9,15 @@
 <div class="global">
     <div class="wrap">
         <div class="grey_box horizontal">
-            <img class="img_horizontal" src="resources/day_of_the_42.png" >
+            <img class="img_doft" src="resources/day_of_the_42.png" >
+            <img class="img_close" src="resources/close.gif">
+            <img class="img_loupe" src="resources/loupe.png">
+            <img class="img_reload" src="resources/reload.png">
         </div>
         <div class="container">
             <div class="grey_box vertical left">
                 <img  class="side_image" src="resources/arrow.png">
+
             </div>
             <div class="grey_box center"></div>
             <div class="grey_box vertical right"></div>
