--- a/day00/ex02/doft.html
+++ b/day00/ex02/doft.html
@@ -15,12 +15,12 @@
             <img class="img_reload" src="resources/reload.png">
         </div>
         <div class="container">
-            <div class="grey_box vertical left">
+            <div class="grey_box vertical">
                 <img  class="side_image" src="resources/arrow.png">
-
+                <img class="side_image" src="resources/main.png">
             </div>
             <div class="grey_box center"></div>
-            <div class="grey_box vertical right"></div>
+            <div class="grey_box vertical"></div>
         </div>
     </div>
 </div>
