--- a/day00/ex02/doft.html
+++ b/day00/ex02/doft.html
@@ -7,22 +7,34 @@
 </head>
 <body>
 <div class="global">
-    <div class="wrap">
-        <div class="grey_box horizontal">
-            <img class="img_doft" src="resources/day_of_the_42.png" >
-            <img class="img_close" src="resources/close.gif">
-            <img class="img_loupe" src="resources/loupe.png">
-            <img class="img_reload" src="resources/reload.png">
-        </div>
+
         <div class="container">
-            <div class="grey_box vertical">
-                <img  class="side_image" src="resources/arrow.png">
-                <img class="side_image" src="resources/main.png">
+            <div class="grey_box horizontal">
+                <img class="img_doft" src="resources/day_of_the_42.png" >
+                <img class="img_close" src="resources/close.gif">
+                <img class="img_loupe" src="resources/loupe.png">
+                <img class="img_reload" src="resources/reload.png">
             </div>
-            <div class="grey_box center"></div>
-            <div class="grey_box vertical"></div>
+            <div class="down">
+                <div class="grey_box vertical">
+                    <img  class="side_image" src="resources/arrow.png">
+                    <img class="side_image" src="resources/main.png">
+                    <img class="side_image" src="resources/oeil.png">
+                    <img class="side_image" src="resources/outil.png">
+                    <img class="side_image" src="resources/chat-icon.png">
+                </div>
+                <div class="grey_box center">
+                    <img class="central_img" src="resources/cluster.jpg">
+                </div>
+                <div class="grey_box vertical" style="justify-content: flex-start">
+                    <img class="side_image" src="resources/book.png">
+                    <img class="side_image" src="resources/towel.png">
+                    <img class="side_image" src="resources/brick.jpg">
+                </div>
+            </div>
+
         </div>
-    </div>
+        <div class="chat"></div>
 </div>
 
 </body>
