--- a/day00/ex02/doft.html
+++ b/day00/ex02/doft.html
@@ -34,7 +34,16 @@
             </div>
 
         </div>
-        <div class="chat"></div>
+        <div class="chat">
+            <p>Vous <span class="big_word">entrez</span> alors dans une grande piece remplie d'<span class="ordinateur">ordinateurs</span>...</p>
+
+            <p class="italic">- Bonjour, vous êtes nouveau ici ?</p>
+            <div>
+                <input class="submit" type="text">
+                <input type="submit" value="Repondre">
+            </div>
+
+        </div>
 </div>
 
 </body>
