--- a/day00/ex02/doft.html
+++ b/day00/ex02/doft.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="doft.css">
+    <title> Day of the 42 </title>
 </head>
 <body>
-$END$
+<div class="wrapper">
+    <div class="header">
+        <img class="logo" src="resources/day_of_the_42.png" title="logo" alt="logo">
+        <a href="http://www.disney.com/">
+            <img class="reload" src="resources/reload.png" title="reload" alt="Recommencer au début">
+        </a>
+        <a href="http://www.relaischateaux.com/">
+            <img class="close" src="resources/close.gif" title="close" alt="Déconnecter">
+        </a>
+        <img class="loupe" src="resources/loupe.png" title="loupe" alt="loupe">
+    </div>
+    <div class="left">
+        <img class="arrow" src="resources/arrow.png" title="Avancer" alt="Avancer">
+        <img class="main" src="resources/main.png" title="Prendre" alt="Prendre">
+        <img class="oeil" src="resources/oeil.png" title="Regarder" alt="Regarder">
+        <img class="outil" src="resources/outil.png" title="Utiliser" alt="Utiliser">
+        <img class="chat" src="resources/chat-icon.png" title="Parler" alt="Parler">
+    </div>
+    <div class="center">
+        <a href="http://ikea.com" title="ikea"><div class="ikea"></div></a>
+        <a href="http://apple.com" title="apple"><div class="apple"></div></a>
+    </div>
+    <div class="right">
+        <img class="book" src="resources/book.png" title="FAQ" alt="FAQ">
+        <img class="towel" src="resources/towel.png" title="Douche" alt="Douche">
+        <div class="brick" title="Wall" alt="Wall"></div>
+    </div>
+    <div class="box">
+        <p class="box_text">
+            Vous <span class="entrez">entrez</span> alors dans une grande piece remplie <br />d'<span class="shadow">ordinateurs</span>...
+            <br />
+            <i>- Bonjour, vous êtes nouveau ici ?</i>
+            <br />
+            <input class="input" type="text" title="Input" alt="Input">
+            <button title="Button" alt="Button">Repondre</button>
+        </p>
+    </div>
+</div>
+
 </body>
 </html>
