--- a/day00/ex01/mendeleiev.html
+++ b/day00/ex01/mendeleiev.html
@@ -5,38 +5,47 @@
     <title>Mendeleiev periodic table</title>
     <style>
         body {
-            width: 100%;
+            /*width: 100%;*/
             background: url("https://content.nebo.by/photos/stroymaterialy/big/RAL-8017-SHokoladno-korichnevii.png");
             text-align: center;
         }
         p {
-            margin: 2px;
+            margin: 0.2vw;
         }
         table {
-            width: max-content;
+            width: 100%;
+            height: 100%;
         }
+        /*td {*/
+        /*    margin: 2px;*/
+        /*    width: 60px;*/
+        /*    height: 60px;*/
+        /*}*/
         td {
-            margin: 2px;
-            width: 60px;
-            height: 60px;
+            margin: 0.5vw;
+            width: 2vw;
+            height: 2vw;
         }
         .cell {
             border-collapse: collapse;
-            border: 1px solid black;
+            border: 0.1vw solid black;
         }
         .number {
             text-align: left;
-            font-size: small;
+            font-size: 0.7vw;
+            /*font-size: small;*/
             /*font-size: 10px;*/
         }
         .element {
             font-weight: bold;
+            font-size: 1.2vw;
             text-align: center;
             /*font-size: 18px;*/
         }
         .mass {
+            font-size: 0.8vw;
             text-align: right;
-            font-size: small;
+            /*font-size: small;*/
         }
         .t_col_1 {background: #8CC63E;}
         .t_col_2 {background: #F95353;}
@@ -51,14 +60,14 @@
     </style>
 </head>
 <body>
- <div>
-        <h1> Таблица Менделеева</h1>
- </div>
 <div>
-    <table>
+    <div>
+        <h1> Таблица Менделеева</h1>
+    </div>
+    <table contenteditable="true" >
         <!--LINE 1-->
         <tr>
-            <td class="cell t_col_1">
+            <td contenteditable="true" class="cell t_col_1">
                 <p class="mass">1.008</p>
                 <p class="element">H</p>
                 <p class="number">1</p>
