add day04 parts

--- a/day04/ex02/index.html
+++ b/day04/ex02/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ex01</title>
+    <title>Ex02</title>
 </head>
 <body>
-<form action="create.php" method="POST">
+<form action="modif.php" method="POST">
     login: <input type="text" name="login" value="" />
     <br />
-    passwd: <input type="password" name="passwd" value="" />
+    old password: <input type="password" name="oldpw" value="" />
+    <br />
+    new password: <input type="password" name="newpw" value="" />
     <br />
     <input type="submit" name="submit" value="OK"/>
 </form>
