--- a/day09/ex02/index.html
+++ b/day09/ex02/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="todo.js"></script>
+    <style>
+        #item {
+            background-color: violet;
+            border-radius: 10%;
+            border: 1px solid black;
+            margin-top: 5px;
+        }
+    </style>
     <title>Title</title>
 </head>
 <body>
+<div id="wrapper">
+    <div id="ft_list">
+        <button id="new">NEW</button>
+    </div>
+</div>
+
 
 </body>
 </html>
